@@ -1,5 +1,11 @@
 2004-06-12    <tino@firebird.03.softkill.net>
 
+	* Makefile-diff.awk: added for "make diff"
+
+	* Makefile (diff): added, this function shows a comprehensive list
+	of differences to the HEAD revision of CVS.  i.E. this is what you
+	get when you do a close look at "cvs status -v"
+
 	* buf.h (tino_buf_read, tino_buf_write): now return int as they
 	should
 
